# StudyForge

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  SMOKE_PRODUCTION.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  prompt.md  tsconfig.base.json  turbo.json
apps/ai-worker/: .env.production.example  Dockerfile  package.json  pyproject.toml
apps/ai-worker/golden/: tutor_answer_v1.jsonl
apps/ai-worker/scripts/: ingest_load_test.py  ingest_smoke.py  retrieve_smoke.py
apps/ai-worker/src/: celery_app.py  main.py  metrics.py  observability.py  settings.py
apps/ai-worker/src/agents/: __init__.py  base.py  contracts.py  diagram.py  flashcard.py  ingest_agent.py  presentation.py  quiz.py  roadmap.py  semantic.py  tutor.py
apps/ai-worker/src/api/: _chunk_trim.py  admin.py  deep_index.py  diagrams.py  exam_scopes.py  flashcards.py  ingest_url.py  presentations.py  quizzes.py  roadmaps.py  runs.py  semantic.py  tutor.py  tutor_stream.py
apps/ai-worker/src/cache/: __init__.py  artifact_contracts.py  artifact_inmemory.py  artifact_postgres.py  contracts.py  inmemory.py  postgres.py  util.py
apps/ai-worker/src/cost/: __init__.py  budget.py  complexity.py  decide.py  tier_policy.py
apps/ai-worker/src/eval/: __init__.py  cli.py  contracts.py  llm_judge.py  loader.py  ragas.py  ragas_lite.py  runner.py  structural.py
apps/ai-worker/src/graph/: __init__.py  algorithms.py  cytoscape.py  expander.py
apps/ai-worker/src/ingest/: __init__.py  audio.py  docx.py  image.py  notebook.py  pdf.py  pipeline.py  plaintext.py  pptx.py  s3.py  safety_pass.py  store.py
apps/ai-worker/src/llm/: __init__.py  anthropic.py  cerebras.py  contracts.py  fireworks.py  gemini.py  groq.py  metered.py  ollama.py  openai.py  openai_compat.py  openrouter.py  registry.py  together.py
apps/ai-worker/src/notifications/: __init__.py  quiet_hours.py
apps/ai-worker/src/orchestrator/: __init__.py  postgres_store.py  runner.py  (+1 more)
apps/ai-worker/tests/: test_artifact_cache.py  test_cache.py  test_cache_postgres.py  test_complexity.py  test_cost_budget.py  test_decide_route.py  test_diagram_artifact_cache.py  test_eval_harness.py  test_flashcard_artifact_cache.py  test_graph_algorithms.py  test_graph_cytoscape.py  test_graph_expander.py  test_ingest_pdf.py  test_ingest_pipeline.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_groq.py  test_llm_metered.py  test_llm_openai.py  test_llm_prompt_cache.py  test_llm_registry.py  test_metrics.py  test_orchestrator.py  test_orchestrator_postgres.py  test_quiet_hours.py  test_quiz_artifact_cache.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_fusion.py  test_rag_reranker.py  test_rag_retriever.py  test_roadmap_artifact_cache.py  test_safety_injection.py  test_safety_pii.py  test_safety_prompt_builder.py  test_semantic_artifact_cache.py  test_tutor_agent.py  test_versioning_diff.py
apps/sandbox-runner/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/sandbox-runner/src/: executor.py  main.py
apps/sandbox-runner/tests/: test_executor.py  test_fuzz.py
(+361 files in other folders)
