[project]
name = "studyforge-ai-worker"
version = "0.1.0"
description = "FastAPI + Celery workers for parsing, embedding, and AI generation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "celery[redis]>=5.4.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.3",
  "tenacity>=9.0.0",
  "sentry-sdk[fastapi]>=2.14.0",
  "pyyaml>=6.0.3",
  "pymupdf>=1.27.2.3",
  "psycopg-pool>=3.3.1",
  "pgvector>=0.4.2",
  "numpy>=2.4.6",
  "boto3>=1.43.12",
  "youtube-transcript-api>=1.2.4",
  "faster-whisper>=1.2.1",
  "pytesseract>=0.3.13",
  "python-docx>=1.2.0",
  "nbformat>=5.10.4",
  "python-pptx>=1.0.2",
  "fastembed>=0.8.0",
]

[project.optional-dependencies]
parsing = [
  "pymupdf>=1.24.10",
  "python-pptx>=1.0.2",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "nbformat>=5.10.4",
  "tree-sitter>=0.23.0",
  "pytesseract>=0.3.13",
  "paddleocr>=2.8.1",
]
ai = [
  "langchain>=0.3.0",
  "llama-index>=0.11.13",
  "openai>=1.50.0",
  "anthropic>=0.34.2",
  "google-generativeai>=0.8.2",
  "groq>=0.11.0",
  "sentence-transformers>=3.1.1",
  "chromadb>=0.5.7",
  "ragas>=0.2.0",
]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
  "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "boto3",
  "boto3.*",
  "botocore",
  "botocore.*",
  "celery",
  "celery.*",
  "fastapi",
  "fastapi.*",
  "faster_whisper",
  "faster_whisper.*",
  "fitz",
  "fitz.*",
  "pgvector",
  "pgvector.*",
  "psycopg_pool",
  "pytesseract",
  "pytesseract.*",
  "sentence_transformers",
  "structlog",
  "structlog.*",
  "yaml",
]
ignore_missing_imports = true
