[project]
name = "studyforge-sandbox-runner"
version = "0.1.0"
description = "Ephemeral resource-capped executor for student-uploaded code. Network-disabled at the runtime layer (gVisor / Firecracker); this Python service owns timeouts + RLIMIT enforcement + stdout/err capture."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
  "mypy>=1.11.2",
  "httpx>=0.27.2",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
  "RUF001", "RUF002", "RUF003",
  "E741",
  "N806",
  "SIM117",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
